feat(emacs): migrate to nix-ts-mode for improved Nix syntax support
Replace nix-mode with nix-ts-mode to use tree-sitter based parsing.
Tree-sitter provides more accurate syntax highlighting and better
performance than regex-based parsing, plus more active maintenance.

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -284,14 +284,12 @@ markdown-mode is a major mode for editing Markdown-formatted text.
 
 ** Nix
 
-https://github.com/NixOS/nix-mode
+https://github.com/nix-community/nix-ts-mode
 
-#+begin_quote
-An Emacs major mode for editing Nix expressions.
-#+end_quote
+Tree-sitter based major mode for Nix expressions.
 
 #+begin_src emacs-lisp
-(use-package nix-mode
+(use-package nix-ts-mode
   :ensure t
   :mode "\\.nix\\'")
 #+end_src
