feat(emacs): enable maximum font-lock level for tree-sitter modes
Tree-sitter provides more precise syntax analysis than regex-based highlighting.
Maximum font-lock level (4) enables the most granular highlighting this enables,
improving visual feedback and code readability across all tree-sitter modes.

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -265,6 +265,14 @@ The required permissions are:
 
 * language support
 
+** tree-sitter
+
+Use maximum font-lock level for tree-sitter modes.
+
+#+begin_src emacs-lisp
+(setq treesit-font-lock-level 4)
+#+end_src
+
 ** Markdown
 
 https://github.com/jrblevin/markdown-mode
